--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 body {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  height: 100vh;
   background-color: rgb(188, 233, 249);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 225px 1fr;
+  height: 100%;
+}
+
+.sidebar {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  background-color: pink;
+}
+
+.header {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  background-color: lightgreen;
+}
+
+.main-content {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  background-color: lightcoral;
 }
