--- a/style.css
+++ b/style.css
@@ -30,4 +30,40 @@ body {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   background-color: lightcoral;
+  display: grid;
+  grid-template-columns: 1fr 300px;
+}
+
+.projects {
+  display: grid;
+  grid-column: 1 / 2;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  padding: 15px;
+}
+
+.project {
+  min-height: 300px;
+  background-color: rgb(253, 142, 253);
+}
+
+.right-info {
+  grid-column: 2 / 3;
+  background-color: lightcyan;
+  padding: 15px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  gap: 15px;
+}
+
+.announcements {
+  grid-row: 1 / 2;
+  background-color: aquamarine;
+  
+}
+
+.trending {
+  grid-row: 2 / 3;
+  background-color: lightslategray;
 }
