--- a/style.css
+++ b/style.css
@@ -18,6 +18,24 @@ body {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
   background-color: pink;
+  display: grid;
+  grid-template-rows: 100px 200px 100px;
+  padding: 15px;
+}
+
+.sidebar ul {
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 10px;
+  margin-bottom: 50px;
+}
+
+.sidebar h1 {
+  text-align: center;
+}
+
+li {
+  list-style: none;
 }
 
 .header {
@@ -43,8 +61,13 @@ body {
 }
 
 .project {
-  min-height: 300px;
+  min-height: 250px;
   background-color: rgb(253, 142, 253);
+  grid-auto-flow: column;
+  border-left: 10px solid rgb(89, 163, 193);
+  /* box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); */
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
+  border-radius: 8px;
 }
 
 .right-info {
@@ -52,7 +75,7 @@ body {
   background-color: lightcyan;
   padding: 15px;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 450px 450px;
   grid-template-columns: 1fr;
   gap: 15px;
 }
@@ -60,10 +83,13 @@ body {
 .announcements {
   grid-row: 1 / 2;
   background-color: aquamarine;
-  
+  max-height: 600px;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
 }
 
 .trending {
   grid-row: 2 / 3;
   background-color: lightslategray;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
 }
+
