--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ li {
 
 .header-top-right {
   background-color: brown;
-  justify-self: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .replace-with-real-image {
@@ -90,6 +91,9 @@ li {
 
 .header-bottom-right {
   background-color: aquamarine;
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 
 .header-bottom-right button {
@@ -99,7 +103,7 @@ li {
   width: 120px;
   background-color: #1992d4;
   border: 1px solid #1992d4;
-  border-radius: 25px
+  border-radius: 25px;
 }
 
 #search {
@@ -161,12 +165,47 @@ li {
   background-color: aquamarine;
   max-height: 600px;
   box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  padding: 15px;
+}
+
+.announcements h4 {
+  line-height: 0;
+}
+
+.announcements p {
+  line-height: 14px;
 }
 
 .trending {
   grid-row: 3 / 4;
   background-color: lightslategray;
   box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 15px;
+  line-height: 0;
+}
+
+.user {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-rows: none;
+  grid-auto-rows: none;
+}
+
+.user-text {
+  grid-template-columns: 2 / 3;
+}
+
+.user-image {
+  grid-template-columns: 1 / 2;
+  width: 40px;
+  height: 40px;
+  background-color: black;
+  border: 1px black solid;
+  border-radius: 50%;
 }
 
 .trending-header {
