--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+:root {
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
+}
+
 body {
   border: 0;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   height: 100vh;
-  background-color: rgb(188, 233, 249);
 }
 
 .container {
@@ -17,10 +20,11 @@ body {
 .sidebar {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
-  background-color: pink;
+  background-color: #084c61;
   display: grid;
   grid-template-rows: 100px 200px 100px;
   padding: 15px;
+  color: white;
 }
 
 .sidebar ul {
@@ -41,38 +45,44 @@ li {
 .header {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
-  background-color: lightgreen;
+  background-color: #fafaf9;
   display: grid;
   grid-template-columns: 6fr 4fr;
   grid-template-rows: 1fr 1fr;
   gap: 4px;
+  box-shadow: 0px 8px 5px 0px rgba(0,0,0,0.18);
+  z-index: 100;
 }
 
 .header-top-half {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  background-color: rgb(38, 154, 40);
   display: grid;
   grid-template-columns: 6fr 4fr;
 }
 
 .header-top-left {
-  background-color: beige;
   display: flex;
+  align-items: center;
+  gap: 15px;
+  padding-left: 50px;
 }
 
-.header-top-left > input {
-  width: 80%;
+.header-top-left input {
+  width: min(80%, 600px);
   height: 25px;
   border: 1px solid rgba(83, 26, 26, 0);
   border-radius: 50px;
-  background-color: pink;
+  background-color: #e7e5e4;
 }
 
 .header-top-right {
-  background-color: brown;
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
+  align-items: center;
+  gap: 30px;
+  padding: 15px;
+  padding-right: 60px;
 }
 
 .replace-with-real-image {
@@ -87,13 +97,11 @@ li {
 .header-bottom-half {
   grid-row: 2 / 3;
   grid-column: 1 / 3;
-  background-color: orange;
   display: grid;
   grid-template-columns: 6fr 4fr
 }
 
 .header-bottom-left {
-  background-color: rgb(149, 84, 84);
   display: flex;
   grid-template-columns: 100px 1fr;
   align-items: center;
@@ -110,10 +118,12 @@ li {
 }
 
 .header-bottom-right {
-  background-color: aquamarine;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
+  gap: 50px;
   align-items: center;
+  padding: 15px;
+  padding-right: 50px;
 }
 
 .header-bottom-right button {
@@ -126,14 +136,10 @@ li {
   border-radius: 25px;
 }
 
-#search {
-  width: 500px;
-}
-
 .main-content {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
-  background-color: lightcoral;
+  background-color: #e7e5e4;
   display: grid;
   grid-template-columns: 1fr 300px;
   grid-template-rows: 85px 1fr;
@@ -154,25 +160,45 @@ li {
   gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   padding: 15px;
+  background-color: #e7e5e4;
 }
 
 .projects-heading {
   display: block;
+  /* background-color: #e7e5e4; */
 }
 
 .project {
   min-height: 250px;
-  background-color: rgb(253, 142, 253);
+  background-color: #fafaf9;
   grid-auto-flow: column;
-  border-left: 10px solid rgb(89, 163, 193);
+  border-left: 10px solid rgb(240, 61, 192);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
   border-radius: 8px;
+  padding: 0px 15px 15px 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-icons {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.project-test-image {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 50%;
 }
 
 .right-info {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  background-color: lightcyan;
+  background-color: #e7e5e4;
   padding: 15px;
   display: grid;
   grid-template-rows: 350px 85px 350px;
@@ -182,7 +208,7 @@ li {
 
 .announcements {
   grid-row: 1 / 2;
-  background-color: aquamarine;
+  background-color: #fafaf9;
   max-height: 600px;
   box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
   display: grid;
@@ -200,7 +226,7 @@ li {
 
 .trending {
   grid-row: 3 / 4;
-  background-color: lightslategray;
+  background-color: #fafaf9;
   box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
   display: grid;
   grid-template-rows: repeat(4, 1fr);
