--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   grid-column: 1 / 2;
   background-color: #084c61;
   display: grid;
-  grid-template-rows: 100px 200px 100px;
+  grid-template-rows: 100px 300px 150px;
   padding: 15px;
   color: white;
 }
@@ -40,6 +40,17 @@ body {
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+li > a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .header {
