--- a/style.css
+++ b/style.css
@@ -20,18 +20,16 @@ body {
 .sidebar {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
-  background-color: #084c61;
-  display: grid;
-  grid-template-rows: 100px 300px 150px;
-  padding: 15px;
+  background-color: #0a6884;
+  display: flex;
+  flex-direction: column;
   color: white;
 }
 
 .sidebar ul {
-  display: grid;
-  grid-template-rows: repeat(auto-fit, 1fr);
+  display: flex;
+  flex-direction: column;
   gap: 10px;
-  margin-bottom: 50px;
 }
 
 .sidebar h1 {
@@ -79,14 +77,6 @@ li > a {
   padding-left: 50px;
 }
 
-.header-top-left input {
-  width: min(80%, 600px);
-  height: 25px;
-  border: 1px solid rgba(83, 26, 26, 0);
-  border-radius: 50px;
-  background-color: #e7e5e4;
-}
-
 .header-top-right {
   display: flex;
   justify-content: end;
@@ -94,15 +84,6 @@ li > a {
   gap: 30px;
   padding: 15px;
   padding-right: 60px;
-}
-
-.replace-with-real-image {
-  background-color: purple;
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  border: 10px solid pink;
-  border-radius: 50%;
 }
 
 .header-bottom-half {
@@ -120,18 +101,20 @@ li > a {
   gap: 20px;
 }
 
-.active-user-image {
+#big-active-user-image {
+  width: 80px;
+  height: 80px;
+}
+
+#small-active-user-image {
   width: 60px;
   height: 60px;
-  background-color: black;
-  border: 1px solid black;
-  border-radius: 50%;
 }
 
 .header-bottom-right {
   display: flex;
   justify-content: flex-end;
-  gap: 50px;
+  gap: 30px;
   align-items: center;
   padding: 15px;
   padding-right: 50px;
@@ -145,6 +128,15 @@ li > a {
   background-color: #1992d4;
   border: 1px solid #1992d4;
   border-radius: 25px;
+}
+
+.header-bottom-right button:hover {
+  color: #f8d1ff;
+  border: 3px solid black;
+}
+
+a:hover {
+  color: #f8d1ff;
 }
 
 .main-content {
@@ -183,8 +175,8 @@ li > a {
   min-height: 250px;
   background-color: #fafaf9;
   grid-auto-flow: column;
-  border-left: 10px solid rgb(240, 61, 192);
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
+  border-left: 10px solid rgb(221, 103, 242);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.18);
   border-radius: 8px;
   padding: 0px 15px 15px 15px;
   display: flex;
@@ -220,11 +212,13 @@ li > a {
 .announcements {
   grid-row: 1 / 2;
   background-color: #fafaf9;
+  border: 1px solid #fafaf9;
+  border-radius: 8px;
   max-height: 600px;
-  box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
+  box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.18);
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  padding: 15px;
+  padding: 0px 15px 15px 15px;
 }
 
 .announcements h4 {
@@ -238,7 +232,9 @@ li > a {
 .trending {
   grid-row: 3 / 4;
   background-color: #fafaf9;
-  box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.5);
+  border: 1px solid #fafaf9;
+  border-radius: 8px;
+  box-shadow: 8px 8px 5px 0px rgba(0,0,0,0.18);
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   padding: 15px;
@@ -253,11 +249,38 @@ li > a {
 .user-image {
   width: 60px;
   height: 60px;
-  background-color: black;
-  border: 1px solid black;
+  border: 1px solid rgba(0,0,0,0.00);
   border-radius: 50%;
 }
 
 .trending-header {
   align-self: flex-end;
+}
+
+.cat-image {
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0,0,0,0.00);
+  border-radius: 50%;
+}
+
+#yarn {
+  width: 60px;
+  height: 60px;
+}
+
+.header-top-left input {
+  width: min(80%, 600px);
+  background: white;
+  height: 35px;
+  border: none;
+  border-radius: 50px;
+  background-color: #e7e5e4;
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1rem;
+  padding-left: 15px;
+}
+
+.header-top-left input:focus {
+  border: none;
 }
