--- a/style.css
+++ b/style.css
@@ -18,12 +18,14 @@ body {
 }
 
 .sidebar {
-  grid-row: 1 / 3;
-  grid-column: 1 / 2;
   background-color: #0a6884;
   display: flex;
   flex-direction: column;
   color: white;
+  position: fixed;
+  width: 300px;
+  height: 100vh;
+  position: fixed;
 }
 
 .sidebar ul {
